# wiscRaft

./: CS739 P2.pptx  README.md
database/: database.cc  database.h  database.hh  store.txt  test.cpp
key_value_store/: .key_value_store.h.swp  a.out  key_value_store.cpp  key_value_store.h
log/: log.cc  log.h  log.hh
proto/: database.proto  raft.proto
protos/: database.proto  raft.proto
raft/: CMakeLists.txt  client.cc  database.cc  logExecute.cc  logExecute.h  raft.cc  raft.h  raftClientServerService.cc  raftServerService.cc  server.cc  server.h  serverReplica.cc
